# fastmcp-production-template

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
collector/: adot-aws.yaml  otelcol-datadog.yaml  otelcol-grafana.yaml
config/: allowlist.yaml  application-dev.yaml  application.yaml
docker/: Dockerfile  docker-compose.observe.yml  docker-compose.yml  init.sql  prometheus.yml  tempo.yaml
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: datasources.yaml
examples/: client.py
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: deployment.yaml  externalsecret.yaml
src/server/: main.py
src/server/config/: security.py  settings.py
src/server/db/: connection.py  pool.py
src/server/observability/: context.py  instrument.py  telemetry.py
src/server/tools/: __init__.py  detail.py  health.py  search.py  stats.py
tests/: conftest.py  test_integration.py  test_security.py  test_telemetry.py  test_tools.py
